cc_binary(
    name = "lock_mem",
    srcs = glob([
        "lock_mem.cpp",
    ]),
)

cc_binary(
    name = "bm_loop",
    srcs = glob([
        "loop.cpp"
    ]),
    deps = [
        "@benchmark//:benchmark_main",
    ],
    linkopts = [
        "-lpthread",
    ],
)

cc_binary(
    name = "bm_loop_what_else",
    srcs = glob([
        "loop_what_else.cpp"
    ]),
    deps = [
        "@benchmark//:benchmark_main",
    ],
    linkopts = [
        "-lpthread",
    ],
)
